Fix x overflow

--- a/src/pages/HomePage/styles.module.css
+++ b/src/pages/HomePage/styles.module.css
@@ -1,6 +1,7 @@
 .mainContainer {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .homeContainer {
